--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+
+
+
+
+
 </head>
 <body>
    <div class="navbar">
@@ -15,19 +23,113 @@
  </div>
  <div class="list">
  <ul>
-        <li>All Models</li>
-        <li>Service & Accessories</li>
-        <li>Brand experience</li>
-        <li>About us</li>
+        <li class="li" >All Models</li>
+        <li class="li">Service & Accessories</li>
+        <li class="li" >Brand experience</li>
+        <li class="li" >About us</li>
     </ul>
 </div>
 
 <div class="icon2">
-    <i class="fa-solid fa-magnifying-glass"></i>
+    <i  class="fa-solid fa-magnifying-glass i2 "></i>
 </div>
 
 
     </div>
+    <!-- nav end -->
+
+    <!-- hero section -->
+
+    <div class="hero">
+        <img  class="img1" src="./assets/heroimg1.avif " alt="">
+        <h1 class="heading1" >Future is an attitude</h1>
+        <h3 class="heading2" >The new fully electric Audi e-tron GT. </h3>
+        <button class="b1" >Learn more</button>
+    </div>
+
+    <!-- card section -->
+
+    <div class="card-section1">
+        <div class="card1">
+            <img  class="card-img1" src="./assets/card1.webp" alt="">
+        </div>
+        <div class="card2">
+            <h1 class="card2-h1" >Audi RS e-tron GT</h1>
+            <p class="card2-p" >Passion creates progress. </p>
+            <button class="b2" >Learn more</button>
+        </div>
+    </div>
    
+    <!-- card-section2 -->
+     <div class="cards-2">
+        <div class="card4">
+            <img src="./assets/card4.avif" alt="">
+            <p class="paragraph" >Follow us on facebook for all the latest news 
+                and updates
+            </p>
+            <a  class="anchor" href="">Discover now</a>
+
+
+        </div>
+        <div class="card5">
+             <img src="./assets/card5.avif" alt="">
+              <p class="paragraph" >Follow us on facebook for all the latest news 
+                and updates
+            </p>
+            <a  class="anchor" href="">Discover now</a>
+        </div>
+        <div class="card6">
+             <img src="./assets/card6.avif" alt="">
+              <p  class="paragraph" >Follow us on facebook for all the latest news 
+                and updates
+            </p>
+            <a class="anchor"  href="">Discover now</a>
+        </div>
+     </div>
+
+
+
+    <!-- footer -->
+
+    <div class="footer">
+        <div class="firstdiv">
+            <h2>All Models</h2>
+            <ul>
+                <li>All models</li>
+            </ul>
+        </div>
+
+<div class="seconddiv">
+    <h2>Service and Accessories</h2>
+    <ul>
+        <li>Repair and Service</li>
+        <li>Audi Genuine Accessories</li>
+    </ul>
+</div>
+
+<div class="thirddiv">
+    <h2>
+        Brand experience
+    </h2>
+    <ul>
+        <li>Vorsprung durch technik</li>
+        <li>Audi port</li>
+        <li>Audi quattro</li>
+    </ul>
+</div>
+
+<div class="fdiv">
+    <h2>About Us</h2>
+    <ul>
+        <li>Importer</li>
+        <li>Dealerships in Pakistan</li>
+        
+    </ul>
+</div>
+    </div>
+
+    <div class="footer2">
+        <p>2024 AUDI PK. All rights reserved</p>
+    </div>
 </body>
 </html>
