--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
     <!-- footer -->
 
     <div class="footer">
-        <div class="firstdiv">
+        <div class="firstdiv f">
             <h2>All Models</h2>
             <ul>
                 <li>All models</li>
             </ul>
         </div>
 
-<div class="seconddiv">
+<div class="seconddiv f">
     <h2>Service and Accessories</h2>
     <ul>
         <li>Repair and Service</li>
@@ -107,7 +107,7 @@
     </ul>
 </div>
 
-<div class="thirddiv">
+<div class="thirddiv f ">
     <h2>
         Brand experience
     </h2>
@@ -118,7 +118,7 @@
     </ul>
 </div>
 
-<div class="fdiv">
+<div class="fdiv f ">
     <h2>About Us</h2>
     <ul>
         <li>Importer</li>
