--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
    <div class="navbar">
     
 <div class="icon">
-    <div class="img"></div>
+    <div class="img">
+        <img src="./assets/audi_logo-300x300.webp" width="80px" alt="">
+    </div>
  </div>
  <div class="list">
  <ul>
@@ -100,15 +102,15 @@
         <div class="firstdiv f">
             <h2 class="head" id="heading">All Models</h2>
             <ul>
-                <li>All models</li>
+                <li class="myList">All models</li>
             </ul>
         </div>
 
 <div class="seconddiv f">
     <h2 class="head" id="heading">Service and Accessories</h2>
     <ul>
-        <li>Repair and Service</li>
-        <li>Audi Genuine Accessories</li>
+        <li class="myList1">Repair and Service</li>
+        <li class="myList2">Audi Genuine Accessories</li>
     </ul>
 </div>
 
@@ -117,24 +119,24 @@
         Brand experience
     </h2>
     <ul>
-        <li>Vorsprung durch technik</li>
-        <li>Audi port</li>
-        <li>Audi quattro</li>
+        <li class="myList3">Vorsprung durch technik</li>
+        <li class="myList4">Audi port</li>
+        <li class="myList5">Audi quattro</li>
     </ul>
 </div>
 
 <div class="fdiv f ">
     <h2 class="head" id="heading">About Us</h2>
     <ul>
-        <li>Importer</li>
-        <li>Dealerships in Pakistan</li>
+        <li class="myList6">Importer</li>
+        <li class="myList7">Dealerships in Pakistan</li>
         
     </ul>
 </div>
     </div>
 
     <div class="footer2" id = "foot2">
-        <p>2024 AUDI PK. All rights reserved</p>
+        <p class="lastPara" >2024 AUDI PK. All rights reserved</p>
     </div>
 
 
